tests/ui/async-await/in-trait/unconstrained-impl-region.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-impl-region.rs:13:6
   |
LL | impl<'a> Actor for () {
   |      ^^ unconstrained lifetime parameter
   |
help: either remove the type parameter 'a, or make use of it, for example
   |
LL - impl<'a> Actor for () {
LL + impl Actor for () {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
